--- a/contracts/package.json
+++ b/contracts/package.json
@@ -2,9 +2,27 @@
   "name": "hardhat-project",
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.1",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@truffle/dashboard-hardhat-plugin": "^0.2.3",
     "dotenv": "^16.1.4",
     "ethers": "^6.5.1",
     "hardhat": "^2.15.0",
     "hardhat-ethers": "^1.0.1"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
+    "@types/chai": "^4.2.0",
+    "@types/mocha": "^10.0.1",
+    "chai": "^4.2.0",
+    "hardhat-gas-reporter": "^1.0.8",
+    "solidity-coverage": "^0.8.1",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.1.0",
+    "typescript": "^5.1.3"
   }
 }
