--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "hardhat-project",
+  "name": "a",
+  "version": "1.0.0",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.9.1",
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "@truffle/dashboard-hardhat-plugin": "^0.2.3",
+    "@openzeppelin/contracts": "^4.9.1",
+    "@truffle/dashboard-hardhat-plugin": "^0.2.7",
     "dotenv": "^16.1.4",
-    "ethers": "^6.5.1",
     "hardhat": "^2.15.0",
     "hardhat-ethers": "^1.0.1"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
