--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,28 +1,25 @@
 {
   "name": "a",
   "version": "1.0.0",
-  "dependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "@openzeppelin/contracts": "^4.9.1",
-    "@truffle/dashboard-hardhat-plugin": "^0.2.7",
-    "dotenv": "^16.1.4",
-    "hardhat": "^2.15.0",
-    "hardhat-ethers": "^1.0.1"
-  },
   "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/providers": "^5.7.2",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@nomiclabs/hardhat-etherscan": "^3.0.0",
-    "@typechain/ethers-v5": "^10.1.0",
-    "@typechain/hardhat": "^6.1.2",
-    "@types/chai": "^4.2.0",
-    "@types/mocha": "^10.0.1",
-    "chai": "^4.2.0",
-    "hardhat-gas-reporter": "^1.0.8",
-    "solidity-coverage": "^0.8.1",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
+    "@truffle/dashboard-hardhat-plugin": "^0.2.3",
+    "@typechain/ethers-v5": "^10.2.1",
+    "@typechain/hardhat": "^6.1.6",
+    "chai": "^4.3.7",
+    "ethers": "^5.4.0",
+    "hardhat-gas-reporter": "^1.0.9",
+    "solidity-coverage": "^0.8.2",
     "ts-node": "^10.9.1",
-    "typechain": "^8.1.0",
-    "typescript": "^5.1.3"
+    "typechain": "^8.1.1"
+  },
+  "dependencies": {
+    "hardhat": "^2.14.0"
   }
 }
